# e8coin

./: README.md
E8Coin/: README.md
E8Coin/src/ai_optimizer/: optimizer.py
E8Coin/src/ai_security/: ai_security_layer.py
E8Coin/src/ai_security/tests/: test_ai_security.py
E8Coin/src/consensus/: Cargo.toml  geometric_validator.py  mining_optimizer.py
E8Coin/src/consensus/src/: lib.rs
E8Coin/src/dashboard/: index.html  visualizer.js
E8Coin/src/developer_ecosystem/: requirements.txt  sdk.py
E8Coin/src/developer_ecosystem/tests/: test_sdk.py
E8Coin/src/lattice_crypto/: Cargo.toml
E8Coin/src/lattice_crypto/src/: golay.rs  lib.rs
E8Coin/src/lattice_crypto/tests/: test_e8.rs
E8Coin/src/network/: Cargo.toml
E8Coin/src/network/src/: main.rs
E8Coin/src/quantum_simulator/: security_ai.py  simulator.py
E8Coin/src/smart_contracts/: Cargo.toml
E8Coin/src/smart_contracts/src/: lib.rs
E8Coin/src/tokenomics/: econ_predictor.py  economics.py
E8Coin/src/tokenomics/tests/: test_tokenomics.py
e8coin/web/: app.py
symcoin/: Cargo.toml
symcoin/src/: lib.rs
symcoin/src/crypto/: e8.rs  leech.rs  mod.rs
